tools os type combo small changes #35

--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -131,16 +131,16 @@
                         </div>
                         <div class="row">
                             <div class="input-field col s12">
-                                <select id='os_selected_value'>
+                                <select id='tools_os_combo'>
                                     <optgroup label="Ubuntu">
                                         <!-- adding values to use it for dockerfile-->
-                                        <option value="ubuntu:14.04">14.04</option>
-                                        <option value="ubuntu:16.04">16.04</option>
+                                        <option value="ubuntu:14.04">Ubuntu:14.04</option>
+                                        <option value="ubuntu:16.04">Ubuntu:16.04</option>
                                     </optgroup>
                                     <optgroup label="Debian">
-                                        <option value="jessie">8 (Jessie)</option>
-                                        <option value="stretch">9 (Stretch)</option>
-                                        <option value="buster">10 (Buster)</option>
+                                        <option value="jessie">Debian 8 (Jessie)</option>
+                                        <option value="stretch">Debian 9 (Stretch)</option>
+                                        <option value="buster">Debian 10 (Buster)</option>
                                     </optgroup>
                                 </select>
                                 <label>Select Operating System</label>
