--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -15,10 +15,13 @@
 <!-- --------------------------------------------------------- Left Panel ---------------------------------------------------------------------------- -->
 <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
 <div class="leftPanel">
-
-    <!-- Modal Trigger -->
-    <!-- <a class="waves-effect waves-light btn modal-trigger" href="#warningModal">Modal</a> -->
-
+    <div id="leftPanelProgress" class="progress" style="margin-top:1px; display: none;">
+        <div class="indeterminate"></div>
+    </div>
+    <a id="preloaderBtn" class="waves-effect waves-light btn">Toogle Preloader</a>
+    <div id="createNewBtn" class="fixed-action-btn" style="display:block">
+        <a class="btn-floating btn-large waves-effect waves-light red left-align"><i class="material-icons">add</i></a>
+    </div>
     <div style="margin: 20px;">
         <!-- --------------------------------------------------------------------------------------- -->
         <!-- ------------------------------- Search Input ------------------------------------------ -->
@@ -31,24 +34,51 @@
                     <label for="leftPanelSearch">Search</label>
                 </div>
                 <div class="right-align">
-                    <a id="searchFilters" class="teal-text text-lighten-2 btn-flat"><i
-                            class="material-icons">arrow_drop_down</i>search filters</a>
+                    <a id="searchFiltersBtn" class="teal-text text-lighten-2 btn-flat"><i
+                            class="material-icons">keyboard_arrow_right</i>search filters</a>
                 </div>
-                <ul id="collapsible" class="collapsible hidden" style="border:none; box-shadow: none; margin-top:0px">
+                <ul id="searchFiltersCollapsible" class="collapsible hidden"
+                    style="border:none; box-shadow: none; margin-top:0px">
                     <li>
                         <div class="collapsible-header hide" style="padding:0px;"></div>
-                        <div id="searchFiltersCollapsible" class="collapsible-body">
+                        <div id="searchFiltersCollapsibleBody" class="collapsible-body">
                             <form class="col s12">
                                 <div class="row">
+                                    <p class="col s12 m3 grid-s12-m3-l3 left-align">
+                                        <label>
+                                            <input type="checkbox" />
+                                            <span>Tool</span>
+                                        </label>
+                                    </p>
+                                    <p class="col s12 m3 grid-s12-m3-l3 left-align">
+                                        <label>
+                                            <input type="checkbox" />
+                                            <span>Workflow</span>
+                                        </label>
+                                    </p>
+                                    <p class="col s12 m3 grid-s12-m3-l3 left-align">
+                                        <label>
+                                            <input type="checkbox" />
+                                            <span>Reference</span>
+                                        </label>
+                                    </p>
                                     <div class="input-field col s12 m4 grid-s12-m4-l4">
                                         <input id="searchName" type="text">
                                         <label for="searchName">Name</label>
                                     </div>
                                     <div class="input-field col s12 m4 grid-s12-m4-l4">
+                                        <input id="searchVersion" type="text">
+                                        <label for="searchVersion">Version</label>
+                                    </div>
+                                    <div class="input-field col s12 m4 grid-s12-m4-l4">
+                                        <input id="searchEdit" type="text">
+                                        <label for="searchEdit">Edit</label>
+                                    </div>
+                                    <div class="input-field col s12 m6 grid-s12-m6-l6">
                                         <input id="searchContainTool" type="text">
                                         <label for="searchContainTool">Contain Tool</label>
                                     </div>
-                                    <div class="input-field col s12 m4 grid-s12-m4-l4">
+                                    <div class="input-field col s12 m6 grid-s12-m6-l6">
                                         <input id="searchCreatedBy" type="text">
                                         <label for="searchCreatedBy">Created By</label>
                                     </div>
@@ -61,8 +91,9 @@
                                         <label for="searchDateEnd">Created to</label>
                                     </div>
                                     <div class="input-field col s12 m12 grid-s12-m12-l12">
-                                        <div id="searchChips" class="input-field chips left-align" style="margin:0px"></div>
-                                        
+                                        <div id="searchChips" class="input-field chips left-align" style="margin:0px">
+                                        </div>
+
                                     </div>
                                 </div>
                             </form>
