--- a/OpenBioC/app/static/app/konstantina/css/style.css
+++ b/OpenBioC/app/static/app/konstantina/css/style.css
@@ -112,6 +112,16 @@ nav {
 
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
 
+/* -------------------------------------------------------------------- Badge Installation Collapsible -------------------------------------------------------------------------- */
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+
+
+
+
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+
 /* ---------------------------------------------------------------------------- Material Icons ---------------------------------------------------------------------------------- */
 
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
@@ -261,6 +271,12 @@ nav {
 .fixed-action-btn {
     right: auto;
     left: 23px;
+}
+
+.btnCollapsible{
+    padding:0px; 
+    top:-7px; 
+    margin-left: auto;
 }
 
 /* .fixed-action-btn {
