--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="right-align">
                     <a id="searchFiltersBtn" class="teal-text text-lighten-2 btn-flat"><i
-                            class="material-icons">keyboard_arrow_right</i>search filters</a>
+                            class="material-icons" style="padding-bottom: 3px;">keyboard_arrow_right</i>search filters</a>
                 </div>
                 <ul id="searchFiltersCollapsible" class="collapsible hidden"
                     style="border:none; box-shadow: none; margin-top:0px">
