--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -116,7 +116,7 @@
                         <i class="material-icons arrow">keyboard_arrow_right</i>
                         <i class="material-icons">computer</i>
                         Installation
-                        <a id="installationRefreshBtn" class="waves-effect waves-teal btn-flat btnCollapsible"><i
+                        <a id="installationRefreshBtn" class="waves-effect btn-flat btnCollapsible"><i
                                 class="material-icons" style="margin:0px;">refresh</i></a>
                         <span class="new badge" style="margin-left: 5px;" data-badge-caption="Unvalidated"></span>
                         <span class="new badge grey" style="margin-left: 5px;" data-badge-caption="Pending"></span>
