--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -202,7 +202,7 @@
                                 </table>
                             </div>
                         </div>
-                        <div class="row col s12">
+                        <div class="row col s12" ng-show="!tools_info_editable">
                             <button class="btn waves-effect waves-light"
                                 ng-click="tool_info_validate_pressed()">Validate</button>
                         </div>
