--- a/OpenBioC/app/static/app/konstantina/css/style.css
+++ b/OpenBioC/app/static/app/konstantina/css/style.css
@@ -1,4 +1,5 @@
 /* scroll to top */
+
 /* #back2Top {
     width: 40px;
     line-height: 40px;
@@ -24,7 +25,6 @@
     background-color: #DDF;
     color: #000;
 } */
-
 
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
 
@@ -115,10 +115,6 @@ nav {
 /* -------------------------------------------------------------------- Badge Installation Collapsible -------------------------------------------------------------------------- */
 
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
-
-
-
-
 
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
 
@@ -273,10 +269,10 @@ nav {
     left: 23px;
 }
 
-.btnCollapsible{
-    padding:0px; 
-    top:-7px; 
-    margin-left: auto;
+.btnCollapsible {
+    padding: 0px;
+    top: -9px;
+    margin: 0px !important;
 }
 
 /* .fixed-action-btn {
