--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -117,11 +117,17 @@
                         <i class="material-icons left">computer</i>
                         <span class="left">Installation</span>
 
+                        {% verbatim %}
+                        <small class="right"><a href="tool_stdout/{{tools_info_name}}/{{tools_info_version}}/{{tools_info_edit}}/" target="_blank">output ICON</a></small>
+                        {% endverbatim %}
                         <small
                             ng-show="(!tools_info_editable) && (tool_info_validation_status=='Unvalidated' || tool_info_validation_status=='Validated' || tool_info_validation_status=='Failed')"
                             ng-click="tool_info_validate_pressed()" class="right"><a><span
                                     ng-show="tool_info_validation_status=='Validated'">re-</span>validate</a></small>
 
+                        <small ng-show="tool_info_validation_created_at" class="text-muted right" style="padding-top: 3px">
+                            <span ng-bind="tool_info_validation_created_at"></span>
+                        </small>
                         <span ng-show="tool_info_validation_status=='Unvalidated'" class="new badge right"
                             style="margin-left: 5px;" data-badge-caption="Unvalidated"></span>
                         <span ng-show="tool_info_validation_status=='Queued'" class="new badge grey right"
@@ -132,9 +138,6 @@
                             style="margin-left: 5px;" data-badge-caption="Failed"></span>
                         <span ng-show="tool_info_validation_status=='Validated'" class="new badge green right"
                             style="margin-left: 5px;" data-badge-caption="Validated"></span>
-                        <small ng-show="tool_info_validation_created_at" class="text-muted" style="padding-top: 3px">
-                            <span ng-bind="tool_info_validation_created_at"></span>
-                        </small>
 
                         <a ng-show="!tools_info_editable" ng-click="tool_info_validate_refresh_pressed()"
                             id="installationRefreshBtn" class="waves-effect btn-flat btnCollapsible right"><i
@@ -223,11 +226,6 @@
                                     </tbody>
                                 </table>
                             </div>
-                        </div>
-                        <div class='row' ng-show="tool_info_validation_status=='Validated' || tool_info_validation_status=='Failed'">
-                            {% verbatim %}
-                            <a href="tool_stdout/{{tools_info_name}}/{{tools_info_version}}/{{tools_info_edit}}/" target="_blank">Show STDOUT</a>
-                            {% endverbatim %}
                         </div>
                     </div>
                 </li>
