--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -370,6 +370,48 @@
                     </div>
                 </div>
             </li>
+            <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
+            <!-- ---------------------------------------------------------- Q&A Left Panel ----------------------------------------------------------------------- -->
+            <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
+            <li id="users">
+                <div class="collapsible-header">
+                    <i class="material-icons arrow">keyboard_arrow_right</i>
+                    <i class="material-icons">whatshot</i>
+                    Q & A<span class="new badge" data-badge-caption="found">0</span>
+                </div>
+                <div class="collapsible-body">
+                    <div class="row">
+                        <!-- Form -->
+                        <form class="col s12">
+                            <div class="input-field col s12">
+                                <i class="material-icons prefix">search</i>
+                                <input id="qaSearch" type="text" class="validate">
+                                <label for="qaSearch">Search</label>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="container">
+                        <div class="row">
+                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry
+                            richardson
+                            ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food
+                            truck
+                            quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a
+                            bird
+                            on
+                            it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim
+                            keffiyeh
+                            helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                            Ad
+                            vegan
+                            excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw
+                            denim
+                            aesthetic synth nesciunt you probably haven't heard of them accusamus labore
+                            sustainable VHS.
+                        </div>
+                    </div>
+                </div>
+            </li>
         </ul>
 
     </div>
