--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -165,7 +165,8 @@
                         <div class="row">
                              <!-- adding values to use it for dockerfile-->
                             <div class="input-field col s12">
-                                <select id='tools_os_combo'>
+
+                                <!-- <select>
                                     <optgroup label="Ubuntu">
                                        
                                         <option value="ubuntu:14.04">Ubuntu:14.04</option>
@@ -176,10 +177,12 @@
                                         <option value="stretch">Debian 9 (Stretch)</option>
                                         <option value="buster">Debian 10 (Buster)</option>
                                     </optgroup>
-                                </select>
-                                <!-- <select ng-options="item as item.name for item in os_type_selection_init" ng-model="selected"></select>
-                                
-                                <label>Select Operating System</label> -->
+                               
+                                </select> -->
+                                 <select ng-model="selectedOs" ng-options="os.name group by os.dist for os in chooseOs"></select>
+
+                                <label>Select Operating System</label>
+
                             </div>
                         </div>
                         <!-- Installation -->
