os type select formSelect()

--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -10,6 +10,7 @@
 		window.password_reset_token = "{{ password_reset_token }}";
 		window.OBC_PORT = {{port}};
 		window.OBC_CONTROLLER_URL = "{{controller_url}}";
+		window.OBC_OS_CHOICES = {{os_choices|safe}};
 	</script>
 
 	<script src="/static/app/jquery-3.3.1.min.js"></script>
@@ -256,6 +257,11 @@ LOGO FOOTER
 <script type="text/javascript" src="/static/app/konstantina/js/ui.js"></script>
 <script type="text/javascript" src="/static/app/OBC_app.js"></script>
 <script type="text/javascript" src="/static/app/OBC_ctrl.js"></script>
+<script type="text/javascript">
+angular.element(document).ready(function () {
+	$('select').formSelect();
+});
+</script>
 </body>
 </html>
 
