--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -162,7 +162,10 @@
                                 should-apply="tools_search_jstree_config_apply()" ng-model="tools_var_jstree_model"
                                 tree="tools_var_jstree" ng-show="tools_var_jstree_id_show"></div>
                         </div>
-                        <div class="row">
+                        <div class="row" ng-show="!tools_info_editable">
+                            Operating System: <span ng-bind="tool_os_choices.name"></span>
+                        </div>
+                        <div class="row" ng-show="tools_info_editable">
                              <!-- adding values to use it for dockerfile-->
                             <div class="input-field col s12">
 
@@ -179,7 +182,7 @@
                                     </optgroup>
                                
                                 </select> -->
-                                 <select id="tool_os_choices_select" ng-model="tool_os_choices" ng-options="os.name group by os.group for os in os_choices" ng-disabled="tools_info_editable" ></select>
+                                 <select id="tool_os_choices_select" ng-model="tool_os_choices" ng-options="os.name group by os.group for os in os_choices"></select>
 
                                 <label>Select Operating System</label>
 
