a sample download script #43

--- a/OpenBioC/app/templates/app/index.html
+++ b/OpenBioC/app/templates/app/index.html
@@ -156,6 +156,8 @@
 
 <div id="angular_div" ng-app="OBC_app" ng-controller="OBC_ctrl" ng-init="init()">
 
+	<a id='hiddena' download="" href="" ng-show='false'></a>
+
 {% include "app/navbar2.html" %}
 <!-- Sign In Form -->
 <!-- Sign Up Form -->
