--- a/OpenBioC/app/templates/app/right_panel.html
+++ b/OpenBioC/app/templates/app/right_panel.html
@@ -374,7 +374,7 @@
                                         ng-model="workflow_changes" ng-disabled="!workflows_info_editable"></textarea>
                                     <label for="workflowsGeneralEditSummary">Edit Summary</label>
                                 </div>
-                                <div class="input-field chips left-align"></div>
+                                <div id="workflowChips" class="input-field chips left-align" ng-disabled="!tools_info_editable"></div>
                             </form>
                         </div>
                     </div>
