--- a/OpenBioC/app/static/app/konstantina/css/style.css
+++ b/OpenBioC/app/static/app/konstantina/css/style.css
@@ -96,6 +96,17 @@ nav {
 
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
 
+/* ------------------------------------------------------------------------ Accordion Collapsible ------------------------------------------------------------------------------- */
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+
+.customCollapsibleHeader {
+    height: 55px;
+    display: block;
+}
+
+/* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
+
 /* ------------------------------------------------------------------------- Disabled Collapsible ------------------------------------------------------------------------------- */
 
 /* ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
@@ -273,6 +284,19 @@ nav {
     padding: 0px;
     top: -9px;
     margin: 0px !important;
+}
+
+.plusBtn {
+    height: 22px;
+    width: 23px;
+    top: 0px;
+    padding-left: 0px;
+}
+
+.plusIcon {
+    margin-top: -15px;
+    margin-left: -3px;
+    margin-right: 0px !important;
 }
 
 /* .fixed-action-btn {
