--- a/OpenBioC/app/templates/app/left_panel.html
+++ b/OpenBioC/app/templates/app/left_panel.html
@@ -31,79 +31,83 @@
         <!-- --------------------------------------------------------------------------------------- -->
         <div class="row">
             <form class="col s12">
-                <div class="input-field col s12" style="margin-bottom:0px">
-                    <i class="material-icons prefix">search</i>
-                    <input id="leftPanelSearch" type="text" class="validate">
-                    <label for="leftPanelSearch">Search</label>
+                <div class="center-align">
+                    <div class="input-field col s12" style="margin-bottom:0px">
+                        <i class="material-icons prefix">search</i>
+                        <input id="leftPanelSearch" type="text" class="validate">
+                        <label for="leftPanelSearch">Search</label>
+                    </div>
+                    <p class="col s12 m3 grid-s12-m3-l3" style="margin-bottom:0px">
+                        <label>
+                            <input type="checkbox" />
+                            <span>Tool</span>
+                        </label>
+                    </p>
+                    <p class="col s12 m3 grid-s12-m3-l3 left-align" style="margin-bottom:0px">
+                        <label>
+                            <input type="checkbox" />
+                            <span>Workflow</span>
+                        </label>
+                    </p>
+                    <p class="col s12 m3 grid-s12-m3-l3 left-align" style="margin-bottom:0px">
+                        <label>
+                            <input type="checkbox" />
+                            <span>Reference</span>
+                        </label>
+                    </p>
                 </div>
-                <div class="right-align">
-                    <a id="searchFiltersBtn" class="teal-text text-lighten-2 btn-flat"><i
-                            class="material-icons" style="padding-bottom: 3px;">keyboard_arrow_right</i>search filters</a>
-                </div>
-                <ul id="searchFiltersCollapsible" class="collapsible hidden"
-                    style="border:none; box-shadow: none; margin-top:0px">
-                    <li>
-                        <div class="collapsible-header hide" style="padding:0px;"></div>
-                        <div id="searchFiltersCollapsibleBody" class="collapsible-body">
-                            <form class="col s12">
-                                <div class="row">
-                                    <p class="col s12 m3 grid-s12-m3-l3 left-align">
-                                        <label>
-                                            <input type="checkbox" />
-                                            <span>Tool</span>
-                                        </label>
-                                    </p>
-                                    <p class="col s12 m3 grid-s12-m3-l3 left-align">
-                                        <label>
-                                            <input type="checkbox" />
-                                            <span>Workflow</span>
-                                        </label>
-                                    </p>
-                                    <p class="col s12 m3 grid-s12-m3-l3 left-align">
-                                        <label>
-                                            <input type="checkbox" />
-                                            <span>Reference</span>
-                                        </label>
-                                    </p>
-                                    <div class="input-field col s12 m4 grid-s12-m4-l4">
-                                        <input id="searchName" type="text">
-                                        <label for="searchName">Name</label>
-                                    </div>
-                                    <div class="input-field col s12 m4 grid-s12-m4-l4">
-                                        <input id="searchVersion" type="text">
-                                        <label for="searchVersion">Version</label>
-                                    </div>
-                                    <div class="input-field col s12 m4 grid-s12-m4-l4">
-                                        <input id="searchEdit" type="text">
-                                        <label for="searchEdit">Edit</label>
-                                    </div>
-                                    <div class="input-field col s12 m6 grid-s12-m6-l6">
-                                        <input id="searchContainTool" type="text">
-                                        <label for="searchContainTool">Contain Tool</label>
-                                    </div>
-                                    <div class="input-field col s12 m6 grid-s12-m6-l6">
-                                        <input id="searchCreatedBy" type="text">
-                                        <label for="searchCreatedBy">Created By</label>
-                                    </div>
-                                    <div class="input-field col s12 m6 grid-s12-m6-l6">
-                                        <input id="searchDateStart" type="text" class="datepicker">
-                                        <label for="searchDateStart">Created from</label>
-                                    </div>
-                                    <div class="input-field col s12 m6 grid-s12-m6-l6">
-                                        <input id="searchDateEnd" type="text" class="datepicker">
-                                        <label for="searchDateEnd">Created to</label>
-                                    </div>
-                                    <div class="input-field col s12 m12 grid-s12-m12-l12">
-                                        <div id="searchChips" class="input-field chips left-align" style="margin:0px">
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </li>
-                </ul>
             </form>
+
+            <div class="right-align">
+                <a id="searchFiltersBtn" class="teal-text text-lighten-2 btn-flat"><i class="material-icons"
+                        style="padding-bottom: 3px;">keyboard_arrow_right</i>Advanced search</a>
+            </div>
+            <ul id="searchFiltersCollapsible" class="collapsible hidden"
+                style="border:none; box-shadow: none; margin-top:0px">
+                <li>
+                    <div class="collapsible-header hide" style="padding:0px;"></div>
+                    <div id="searchFiltersCollapsibleBody" class="collapsible-body">
+                        <form class="col s12">
+                            <div class="row">
+                                <div class="input-field col s12 m4 grid-s12-m4-l4">
+                                    <input id="searchName" type="text">
+                                    <label for="searchName">Name</label>
+                                </div>
+                                <div class="input-field col s12 m4 grid-s12-m4-l4">
+                                    <input id="searchVersion" type="text">
+                                    <label for="searchVersion">Version</label>
+                                </div>
+                                <div class="input-field col s12 m4 grid-s12-m4-l4">
+                                    <input id="searchEdit" type="text">
+                                    <label for="searchEdit">Edit</label>
+                                </div>
+                                <div class="input-field col s12 m6 grid-s12-m6-l6">
+                                    <input id="searchContainTool" type="text">
+                                    <label for="searchContainTool">Contain Tool</label>
+                                </div>
+                                <div class="input-field col s12 m6 grid-s12-m6-l6">
+                                    <input id="searchCreatedBy" type="text">
+                                    <label for="searchCreatedBy">Created By</label>
+                                </div>
+                                <div class="input-field col s12 m6 grid-s12-m6-l6">
+                                    <input id="searchDateStart" type="text" class="datepicker">
+                                    <label for="searchDateStart">Created from</label>
+                                </div>
+                                <div class="input-field col s12 m6 grid-s12-m6-l6">
+                                    <input id="searchDateEnd" type="text" class="datepicker">
+                                    <label for="searchDateEnd">Created to</label>
+                                </div>
+                                <div class="input-field col s12 m12 grid-s12-m12-l12">
+                                    <div id="searchChips" class="input-field chips left-align" style="margin:0px">
+                                    </div>
+
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </li>
+            </ul>
+
         </div>
 
         <ul class="collapsible expandable popout">
@@ -111,11 +115,14 @@
             <!-- ------------------------------------------------ Tools / Data Left Panel ------------------------------------------------------------------------ -->
             <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
             <li id="toolsData">
-                <div class="collapsible-header">
-                    <i class="material-icons arrow">keyboard_arrow_right</i>
-                    <i class="material-icons">settings</i>
-                    Tools/Data<span class="new badge" data-badge-caption="found"
-                        ng-bind="tools_search_tools_number"></span>
+                <div class="collapsible-header customCollapsibleHeader">
+                    <i class="material-icons arrow left">keyboard_arrow_right</i>
+                    <i class="material-icons left">settings</i>
+                    <span class="left" style="margin-right: 10px;">Tools/Data</span>
+                    <span class="new badge" data-badge-caption="found" ng-bind="tools_search_tools_number"
+                        style="margin-left: 5px;"></span>
+                    <a id="toolsDataPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
+                        data-position="left" data-tooltip="create Tool"><i class="material-icons plusIcon">add</i></a>
                 </div>
                 <div class="collapsible-body">
                     <div class="row">
@@ -180,11 +187,15 @@
             <!-- ---------------------------------------------------- Workflows Left Panel ----------------------------------------------------------------------- -->
             <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
             <li id="workflows">
-                <div class="collapsible-header">
-                    <i class="material-icons arrow">keyboard_arrow_right</i>
-                    <i class="material-icons">device_hub</i>
-                    Workflows<span class="new badge" data-badge-caption="found"
-                        ng-bind="workflows_search_tools_number"></span>
+                <div class="collapsible-header customCollapsibleHeader">
+                    <i class="material-icons arrow left">keyboard_arrow_right</i>
+                    <i class="material-icons left">device_hub</i>
+                    <span class="left" style="margin-right: 10px;">Workflows</span>
+                    <span class="new badge" data-badge-caption="found" ng-bind="workflows_search_tools_number"
+                        style="margin-left: 5px;"></span>
+                    <a id="workflowsPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
+                        data-position="left" data-tooltip="create Workflow"><i
+                            class="material-icons plusIcon">add</i></a>
                 </div>
                 <div class="collapsible-body">
                     <div class="row">
@@ -248,10 +259,13 @@
             <!-- -------------------------------------------------------- Reports Left Panel ----------------------------------------------------------------------- -->
             <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
             <li id="reports">
-                <div class="collapsible-header">
-                    <i class="material-icons arrow">keyboard_arrow_right</i>
-                    <i class="material-icons">whatshot</i>
-                    Reports<span class="new badge" data-badge-caption="found">0</span>
+                <div class="collapsible-header customCollapsibleHeader">
+                    <i class="material-icons arrow left">keyboard_arrow_right</i>
+                    <i class="material-icons left">whatshot</i>
+                    <span class="left" style="margin-right: 10px;">Reports</span>
+                    <span class="new badge" data-badge-caption="found" style="margin-left: 5px;">0</span>
+                    <a id="reportsPlusBtn" class="waves-effect btn green plusBtn right tooltipped" data-position="left"
+                        data-tooltip="create Report"><i class="material-icons plusIcon">add</i></a>
                 </div>
                 <div class="collapsible-body">
                     <div class="row">
@@ -290,10 +304,14 @@
             <!-- -------------------------------------------------------- References Left Panel ----------------------------------------------------------------------- -->
             <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
             <li id="references">
-                <div class="collapsible-header">
-                    <i class="material-icons arrow">keyboard_arrow_right</i>
-                    <i class="material-icons">whatshot</i>
-                    References<span class="new badge" data-badge-caption="found">0</span>
+                <div class="collapsible-header customCollapsibleHeader">
+                    <i class="material-icons arrow left">keyboard_arrow_right</i>
+                    <i class="material-icons left">whatshot</i>
+                    <span class="left" style="margin-right: 10px;">References</span>
+                    <span class="new badge" data-badge-caption="found" style="margin-left: 5px;">0</span>
+                    <a id="referencesPlusBtn" class="waves-effect btn green plusBtn right tooltipped"
+                        data-position="left" data-tooltip="create Reference"><i
+                            class="material-icons plusIcon">add</i></a>
                 </div>
                 <div class="collapsible-body">
                     <div class="row">
@@ -332,10 +350,11 @@
             <!-- -------------------------------------------------------- Users Left Panel ----------------------------------------------------------------------- -->
             <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
             <li id="users">
-                <div class="collapsible-header">
-                    <i class="material-icons arrow">keyboard_arrow_right</i>
-                    <i class="material-icons">whatshot</i>
-                    Users<span class="new badge" data-badge-caption="found">0</span>
+                <div class="collapsible-header customCollapsibleHeader">
+                    <i class="material-icons arrow left">keyboard_arrow_right</i>
+                    <i class="material-icons left">whatshot</i>
+                    <span class="left" style="margin-right: 10px;">Users</span>
+                    <span class="new badge" data-badge-caption="found" style="margin-left: 5px;">0</span>
                 </div>
                 <div class="collapsible-body">
                     <div class="row">
@@ -374,10 +393,13 @@
             <!-- ---------------------------------------------------------- Q&A Left Panel ----------------------------------------------------------------------- -->
             <!-- ------------------------------------------------------------------------------------------------------------------------------------------------- -->
             <li id="users">
-                <div class="collapsible-header">
-                    <i class="material-icons arrow">keyboard_arrow_right</i>
-                    <i class="material-icons">whatshot</i>
-                    Q & A<span class="new badge" data-badge-caption="found">0</span>
+                <div class="collapsible-header customCollapsibleHeader">
+                    <i class="material-icons arrow left">keyboard_arrow_right</i>
+                    <i class="material-icons left">whatshot</i>
+                    <span class="left" style="margin-right: 10px;">Q & A</span>
+                    <span class="new badge" data-badge-caption="found" style="margin-left: 5px;">0</span>
+                    <a id="qaPlusBtn" class="waves-effect btn green plusBtn right tooltipped" data-position="left"
+                        data-tooltip="create Question"><i class="material-icons plusIcon">add</i></a>
                 </div>
                 <div class="collapsible-body">
                     <div class="row">
